--- a/PandemobiumStockTrader/Server/web/web/download.html
+++ b/PandemobiumStockTrader/Server/web/web/download.html
@@ -41,7 +41,7 @@
         <td width="24" class="arrow">&rarr;</td>
         <td width="57" class="imagelink">
             <a href="itms-services://?action=download-manifest&url=http://localhost:8080/versions.plist">
-                <img src="images/SkullNBones.png" height="57" width="57" />
+                <img src="../images/SkullNBones.png" height="57" width="57" />
             </a>
         </td>
     </tr></table>
