switching from direct links to relational links

--- a/PandemobiumStockTrader/Server/web/web/download.html
+++ b/PandemobiumStockTrader/Server/web/web/download.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Install Geoloqi</title>
+    <title>Install Pandemobium Stock Trader</title>
     <style type="text/css">
         body {
             font-family: Helvetica, arial, sans-serif;
